--- a/index.html
+++ b/index.html
@@ -3,24 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <title>Поддержать</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh; /* Высота на весь экран */
-            margin: 0;
-            padding: 0;
-            background-color: #f0f8ff; /* Фон страницы */
-        }
-        h1 {
-            font-size: 24px;
-            color: #333;
-            margin-bottom: 20px;
+            text-align: center;
+            padding-top: 100px;
         }
         .support-button {
             background-color: #007BFF; /* Синий цвет */
@@ -31,28 +19,16 @@
             border-radius: 5px;
             cursor: pointer;
             text-decoration: none;
-            display: inline-block;
         }
         .support-button:hover {
             background-color: #0056b3;
         }
     </style>
-    <script>
-        function openTonTransfer() {
-            const tonLink = "ton://transfer/UQAwNFXOcd1COXIvfcib29JJ6dPEx0QNIQtUBdmOoMOjXHYK";
-            window.location.href = tonLink;
-            
-            // Защитный механизм на случай, если ссылка не открывается
-            setTimeout(function() {
-                alert('Похоже, что ваш кошелек не установлен. Убедитесь, что TonKeeper установлен, или загрузите его с официального сайта.');
-            }, 1000); // 1 секунда на проверку, что TonKeeper не открылся
-        }
-    </script>
 </head>
 <body>
     <h1>Поддержите проект</h1>
-    <button class="support-button" onclick="openTonTransfer()">
+    <a href="https://app.tonkeeper.com/send?address=UQAwNFXOcd1COXIvfcib29JJ6dPEx0QNIQtUBdmOoMOjXHYK" target="_blank" class="support-button">
         Поддержать
-    </button>
+    </a>
 </body>
 </html>
