--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <h1>Поддержите проект</h1>
-    <a href="https://app.tonkeeper.com/send?address=UQAwNFXOcd1COXIvfcib29JJ6dPEx0QNIQtUBdmOoMOjXHYK" target="_blank" class="support-button">
+    <a href="https://app.tonkeeper.com/transfer/UQAwNFXOcd1COXIvfcib29JJ6dPEx0QNIQtUBdmOoMOjXHYK" target="_blank" class="support-button">
         Поддержать
     </a>
 </body>
